--- a/src/style.css
+++ b/src/style.css
@@ -15,41 +15,26 @@ body, html {
     background-color: var(--light);
 }
 
-
 .app{
     min-height: 100vh;
     max-width: 100vw;
     display: flex;
 }
-
 .card__secuence{
+    margin: auto;
     max-width: 20rem;
     min-height: 37rem;
     width: 100%;
-    height: 100%;
     background-color: white;
-    margin: auto;
+}
+
+.grid__component{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr 3rem;
+    grid-template-rows: 2rem 1fr 3rem;
     gap: 2rem;
 }
-.secuence__numbers{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-}
-.option__number{
-    width: 5.5rem;
-    height: 5.5rem;
-    font-size: 4rem;
-    font-weight: 700;
-    text-align: center;
-    line-height: 5.5rem;
-    color: var(--dark);
-    position: relative;
-}
+
 .btn__answer{
     background-color: var(--dark);
     color: var(--light);
@@ -61,70 +46,6 @@ body, html {
     font-size: .9rem;
     letter-spacing: .1rem;
     border: 0;
-}
-.posible__answers{
-    position: absolute;
-    bottom: -15px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 1rem;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    width: 7.5rem;
-    background-color: var(--gray);
-    padding: .3rem;
-    border-radius: .3rem;
-    line-height: normal;
-}
-.posible__answers--answer{
-    padding: 0 .5rem;
-    border: 0;
-    border-radius: .3rem;
-    color: var(--dark);
-    font-weight: 700;
-}
-
-.icon__answer{
-    position: absolute;
-    bottom: -3rem;
-    font-size: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-.percentage__result{
-    font-size: 5rem;
-}
-.result__icon{
-    font-size: 2.5rem;
-}
-.btn__result,
-.percentage__result{
-    justify-self: center;
-}
-
-/*BREAKPOINTS*/
-@media screen and (min-width:768px) {
-    .card__secuence{
-        max-width: 45rem;
-        min-height: 20rem;
-    }
-    .secuence__numbers {
-        flex-direction: row;
-    }
-}
-
-@media screen and (min-width:1300px) {
-    .card__secuence{
-        max-width: 60rem;
-        min-height: 25rem;
-    }
-}
-
-.hidden__number {
-    border:2px dashed #A4A4A4;
-    border-radius: 1rem;
 }
 
 
@@ -145,3 +66,19 @@ body, html {
       opacity: 1;
   }
   
+
+@media screen and (min-width:992px) {
+    .card__secuence{
+        max-width: 45rem;
+        min-height: 20rem;
+    }
+}
+@media screen and (min-width:1366px) {
+    .card__secuence{
+        max-width: 60rem;
+        min-height: 25rem;
+    }
+
+}
+
+
